--- a/style.css
+++ b/style.css
@@ -1,17 +1,41 @@
 * {
     margin: 0px;
     padding: 0px;
-    display:flexbox;
+    box-sizing: border-box;
+   
 }
-
-.container {
-    display:flex;
-    flex-direction: column;
+.body {
+    display: flex;
+    flex:1;
+    flex-direction: row;
     justify-content: center;
     align-items: center;
-    background-color:lightgreen;
 }
 
+
+.container {
+    margin: 0px 0px;
+   display: flex;
+    flex:1;
+    flex-direction: column;
+    justify-content:center;
+    align-items: center;
+    background-color:lightgreen;
+    
+    /*width:min-content;*/
+}
+
+.sketch{
+    display: flex;
+    flex-wrap: wrap;    /*
+    flex-direction: column;
+    justify-content:center;
+    align-items: center;
+    */
+    width: 800px;
+    height : 800px;
+}
+/**/
 .rowContainer {
     display: flex;
     flex-direction: row;
@@ -21,6 +45,7 @@
 }
 
 .gridDiv {
+    display:flex;
     width: 50px;
     height: 50px;
     background-color: cyan;
@@ -29,7 +54,7 @@
     border-color: blue;
 }
 
-.gridDiv:hover {
+.highlight {
     background-color: yellow;
   }
-
+ /* */
